plugins/kotlin/idea/tests/testData/gradle/hmppImportAndHighlighting/multiModulesHmpp/api-jvm/src/main/kotlin/playground/SomeUsefulInfo.kt
package playground

val callMeFromMPP = 42

val moduleName = "api-jvm"

class SomeUsefulInfo

fun <!LINE_MARKER!>main<!>() {
    println("Hello±!")
}
